project_backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: project-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-backend
  template:
    metadata:
      labels:
        app: project-backend
    spec:
      containers:
        - name: project-backend
          image: project_backend:2.8
