project_backend/manifests/postgres-sts.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todoapp-postgres-svc
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: todoapp-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: postgres-stset
spec:
  serviceName: todoapp-postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-postgres
  template:
    metadata:
      labels:
        app: todoapp-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:18.6-alpine
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 200Mi
