project_backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-backend-svc
spec:
  type: ClusterIP
  selector:
    app: project-backend
  ports:
    - name: http
      protocol: TCP
      port: 4321
      targetPort: 4040
